--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="backgroundGray">#C9C9C9</color>
+    <color name="red">#FF0000</color>
+    <color name="black">#000000</color>
 </resources>
