--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -64,6 +64,25 @@
                 android:textColor="@color/black"/>
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请再次输入密码"
+            android:textSize="16sp"
+            app:counterEnabled="true"
+            app:counterMaxLength="15"
+            app:counterOverflowTextAppearance="@style/style_input_error"
+            app:errorEnabled="true"
+            app:hintAnimationEnabled="true">
+
+            <!-- android:afterTextChanged="@{vm::onInputFinish}"-->
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:drawablePadding="14dp"
+                android:text="@={params.repassword}"
+                android:textColor="@color/black"/>
+        </android.support.design.widget.TextInputLayout>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
