--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -9,12 +9,14 @@
     tools:context=".LaunchActivity">
 
     <Button
+        android:textAllCaps="false"
         android:id="@+id/bt_lznby"
         android:text="@string/lznby_demo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <Button
+        android:textAllCaps="false"
         android:id="@+id/bt_code_dog"
         android:text="@string/codedog_demo"
         android:layout_width="match_parent"
