--- a/app/src/main/res/layout/activity_recycle_view.xml
+++ b/app/src/main/res/layout/activity_recycle_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- recycleView 使用的入口界面 -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -14,50 +15,29 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/bt_retrofit"
-                android:text="@string/bt_retrofit2"
+                android:id="@+id/bt_recycle_view_multi_type"
+                android:text="@string/recycle_view_multi_type"
                 android:textAllCaps="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <Button
-                android:text="@string/bt_animation"
-                android:id="@+id/bt_animation"
+                android:id="@+id/bt_recycle_view_base"
                 android:layout_width="match_parent"
                 android:textAllCaps="false"
                 android:layout_height="wrap_content"/>
 
             <Button
-                android:text="@string/bt_rxjava2"
-                android:id="@+id/bt_rxjava2"
                 android:layout_width="match_parent"
                 android:textAllCaps="false"
                 android:layout_height="wrap_content"/>
 
             <Button
-                android:text="@string/smartTable"
-                android:id="@+id/bt_smart_table"
                 android:layout_width="match_parent"
                 android:textAllCaps="false"
                 android:layout_height="wrap_content"/>
 
             <Button
-            android:id="@+id/bt_fragment"
-            android:text="@string/fragment"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:layout_height="wrap_content"/>
-
-            <Button
-                android:id="@+id/bt_recycle_view"
-                android:text="@string/recycle_view"
-                android:layout_width="match_parent"
-                android:textAllCaps="false"
-                android:layout_height="wrap_content"/>
-
-            <Button
-                android:id="@+id/bt_ok_http"
-                android:text="@string/okhttp"
                 android:layout_width="match_parent"
                 android:textAllCaps="false"
                 android:layout_height="wrap_content"/>
